bk_ida/gccida/g1/print_switch_values
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/toplev.c:4937:7: error: unknown type name '$258AECD3FC566EB195B4BBD0B1CA287A'
const $258AECD3FC566EB195B4BBD0B1CA287A *v16; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/toplev.c:4939:7: error: unknown type name '$1D571F2FE86DE6D03AA3EA39F18D92F2'
const $1D571F2FE86DE6D03AA3EA39F18D92F2 *v18; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/toplev.c:4996:24: error: unknown type name '$258AECD3FC566EB195B4BBD0B1CA287A'
while ( v16 != ( const $258AECD3FC566EB195B4BBD0B1CA287A *)documented_lang_options ); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/toplev.c:4996:60: error: expected ')'
while ( v16 != ( const $258AECD3FC566EB195B4BBD0B1CA287A *)documented_lang_options ); 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/toplev.c:4996:7: note: to match this '('
while ( v16 != ( const $258AECD3FC566EB195B4BBD0B1CA287A *)documented_lang_options ); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/toplev.c:5008:10: error: use of undeclared identifier 'unk_6F4758'
while ( &unk_6F4758 != ( _UNKNOWN *)v18 ); 
         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_switch_values/src/obj/toplev.o] Error 1
